// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with no content if content is set as null 1`] = `null`;

exports[`5. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`6. an article with heading tags 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`7. an article with link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`8. an article with italic link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`9. an article with bold text followed by bold link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`10. an article with italic and normal text link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`11. an article with bold and italic text at the same time 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`12. an article with text wrapped in inline element 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`13. an article with paragraph with text and inline element 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`14. an article with inline inside a bold tag 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`15. an article starting with single quote 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`16. an article starting with double quote 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`18. an inline link reports analytics event on press 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "articleId": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
    "article_topic_tags": Array [
      "topic",
    ],
    "bylines": "Some byline",
    "edition_type": "past 6 days",
    "eventTime": "2018-01-01T00:00:00.000Z",
    "headline": "Some Headline",
    "label": "Some Label",
    "linkType": "",
    "linkUrl": Object {
      "canonicalId": undefined,
      "href": "https://link.io",
      "tag": "LINK",
      "type": undefined,
    },
    "pageName": "this-is-slug-2k629tpvh",
    "parent_site": "TIMES",
    "past_edition_date": "2015-03-13T18:54:58.000Z",
    "published_time": "2015-03-13T18:54:58.000Z",
    "referral_url": "referralUrl.com",
    "section": "Some Section",
    "template": "mainstandard",
  },
  "component": "ArticleLink",
  "object": "Article",
}
`;

exports[`19. renders content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`20. an article with inline paragraph 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <Gutter
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <Header
          width={750}
        />
      </Gutter>
    }
    extraData={true}
    initialNumToRender={2}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        />
      </View>
      <View
        style={null}
      />
      <View
        style={null}
      />
      <View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "backgroundColor": "#ffffff",
                "maxWidth": "100%",
                "width": undefined,
              },
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color={null}
            hidesWhenStopped={true}
            size="large"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
